--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ sys_minimal:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - docker run -v `pwd`/.:/falcon -i variant_minimal:${CI_COMMIT_REF_SLUG} /falcon/_gitlab-ci/testscripts/./test_all.sh ~/falcon-build /tmp
+    - docker run -v `pwd`/.:/falcon -v /tmp:/tmp/tmp-host -i variant_minimal:${CI_COMMIT_REF_SLUG} /falcon/_gitlab-ci/testscripts/./test_all.sh ~/falcon-build /tmp
     
 sys_cmnalib:
   stage: system_test
