Refactors subwindow to improve runtime behaviour
Reasons:
  - Keep subwindows visible independent from runs
  - Object creation was not done accordingly to the buttons
  - Confusing copy code based on magic flags used to enable functions

Solution:
  - Create class for performance plots
    + seperated calculation, adding and replotting (FPS-based) of data
  - Create class and subclasses for waterfall plots
    + Reduction of copy code and flag-based calls
    + Extensible for potential future waterfall diagrams
  - Refactor button actions
    + Activation/Deactivation logic linked with Start & Stop Buttons
    + Creation of waterfall objects triggered by dynamic option buttons
    + Waterfall diagrams remain when eye is deactivated

Context:
  - 23-mdi-area-keep-subwindow-visible-indepentent-from-runs

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -30,9 +30,10 @@ set(gui
     spectrum.cpp
     file_input_output.cpp
     settings.cpp   
-    plots.cpp
     setting_slots.cpp
     dynamic_options.cpp
+    performance_plot.cpp
+    waterfall.cpp
     ${IMAGES}
   )
 
