Introduces a RNTI table option to the GUI
Reasons:
  - per RNTI table added with average mcs, tbs and prb
  - per RNTI activity count
  - user adjustable averaging period
  - sorting functions for table

Solution:
  - RNTITable class with internal database to consume information from DCI
  	- realized with QMap's for fast look ups
	- collects data on every push from SubframeConsumer
	- averages data timer-based and updates table
  - sorting column-wise by double clicking any item or single clicking the columns header
	- after sorting by a column was selected, selecting this column for sorting again will cause the change of sorting order (ascending/descending)
	- latest selection of column to sort and sorting order is stored in settings
  - length of averaging period can be adjusted by slider in range of 100ms to 5s
	- granularity of timer is defined by macro (100ms granularity)

Context:
  2-gui-provide-a-list-view-of-active-rntis-and-corresponding-metrics

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -34,6 +34,7 @@ set(gui
     dynamic_options.cpp
     performance_plot.cpp
     waterfall.cpp
+    rnti_table.cpp
     colorpicker.cpp
     ${IMAGES}
   )
